# django-online-shop-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE.md  README.md  SECURITY.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: linters.yml  tests.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/api/v1/: admin.py  apps.py  consumers.py  middleware.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/api/v1/migrations/: 0001_initial.py  0002_chat_message.py  0003_remove_chat_title_chat_customer_chat_product.py  0004_fairecategory_newscategory_alter_chat_options_and_more.py  0005_alter_faire_options_alter_fairecategory_options_and_more.py
backend/api/v1/models/: __init__.py  cart.py  category.py  chat.py  faire.py  favorites.py  feedback.py  news.py  order.py  product.py
backend/api/v1/services/: chat_service.py  message_service.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
backend/management/command/: clear_old_chats.py
backend/src/api/: admin.py  serializers.py  signals.py  urls.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_rename_product_cart_product_id.py
backend/src/api/models/: __init__.py  category.py
backend/src/fixtures/: data.json
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: START.md
fixtures/: data.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Home.jsx  LandingPage.jsx  LoginComp.jsx  LoginLink.jsx  ProtectedRoute.jsx  index.js
frontend/src/components/about/: About.jsx
frontend/src/components/carousel/: Carousel.jsx
frontend/src/components/contacts/: Contacts1.jsx  Contacts2.jsx
frontend/src/components/footer/: Footer.jsx
frontend/src/components/partners/: Partners.jsx
frontend/src/components/section/: Section.jsx
frontend/src/components/video/: Video.jsx
frontend/src/online-shop/: OnlineShop.jsx
frontend/src/online-shop/cart/: CartComp.jsx  cart.txt
frontend/src/online-shop/detail/: AddToCart.jsx  DetailComp.jsx  MakeOrder.jsx  detail.txt  detailmain.js
frontend/src/online-shop/layout/: LayoutComp.jsx  layoutmain.js
frontend/src/online-shop/navbar/: NavbarComp.jsx  (+1 more)
frontend/src/pages/: Contacts.jsx
frontend/src/styles/: about.css  contacts.css  contacts1.css  contacts2.css  footer.css  landing.css  modal.css  section.css  styles.css  video.css
frontend/src/utils/: categories.js  contactOffices.js  name.js  products.js  section.js
infra/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
infra/nginx/: nginx.conf  online-shop.conf
onlinestore/onlinestore/: settings.py
src/api/: admin.py  apps.py  serializers.py  signals.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_rename_product_cart_product_id.py  0003_alter_category_options.py  0004_feedback.py  0005_category_image_product_image.py
src/api/models/: __init__.py  cart.py  category.py  feedback.py  order.py  product.py
(+13 files in other folders)
